Bug 124893 - Validity check on dictionary creation.
Summary: Validity check on dictionary creation.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Ritchie Cunningham
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks: Spell-Checking-Dialog
  Show dependency treegraph
 
Reported: 2019-04-23 00:41 UTC by Ritchie Cunningham
Modified: 2019-04-24 09:33 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ritchie Cunningham 2019-04-23 00:41:44 UTC
Description:
When creating a new dictionary, the 'Ok' button is active, allowing you to create a dictionary with no name.

Found while fixing tdf#61076. While this doesn't present an issue of data loss
it still seems like unexpected behaviour.


Steps to Reproduce:
-- Open LibreWriter
  -- Hit F7
  -- Open 'Options'
  -- Click 'New'
  -- Press 'Ok'.

Interestingly, if you type something into the field, and then remove it, the 'Ok' button does disable as is the expected behaviour.

Actual Results:
The 'Ok' button is enabled without text in the input field.

Interestingly, if you type something into the field, and then remove it, the 'Ok' button does disable as is the expected behaviour.

Expected Results:
The 'Ok' Button should ideally be disabled when no text is in the field to avoid having an un-named dictionary.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Alex Thurgood 2019-04-23 09:38:45 UTC
Changed component to Writer. Base is for all things ODB related.
Comment 2 Ritchie Cunningham 2019-04-23 09:43:05 UTC
https://gerrit.libreoffice.org/#/c/71084/ Fix posted here.
Comment 3 Katarina Behrens (Inactive) 2019-04-24 08:42:37 UTC
Makes sense
Comment 4 Commit Notification 2019-04-24 08:44:34 UTC
Rtch90 committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/4dba49c9f92de40c3935f1778cf301030db08343%5E%21

tdf#124893 Validity check on new dialog creation.

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Ritchie Cunningham 2019-04-24 09:33:20 UTC
Thank you Katarina.