tdf#124893 Validity check on new dialog creation.

Change-Id: I5f94c8204a4c35470e891eb89cfbe74aad852bf4